# polymorphism

./: CMakeLists.txt  Circle.hpp  Ellipse.cpp  Ellipse.hpp  Figure.cpp  Figure.hpp  LICENSE.md  Rectangle.cpp  Rectangle.hpp  Triangle.hpp  input.txt  main.cpp
inc/: Circle.hpp  Ellipse.hpp  Figure.hpp  Formulae.hpp  Rectangle.hpp  Triangle.hpp
src/: Circle.cpp  Ellipse.cpp  Figure.cpp  Formulae.cpp  Rectangle.cpp  Triangle.cpp
